fixed whole content alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,8 @@ body {
 .tip-calculator {
     background-color: white;
     display: flex;
+    align-items: center;
+    justify-content:center;
     flex-direction: column;
     padding: 2rem;
     border-radius: 1.4rem 1.4rem 0 0;
@@ -109,6 +111,7 @@ input {
     padding: 39px 21px;
     border-radius: 12px;
     margin-top: 3rem;
+    width: 80%;
 }
 
 .tip-amount,
